# RES-CHHiP-Trial-UQ

./: .gitignore  GUI.py  Makefile  README.md  UNet.ipynb  configuration.yaml  devbox.json  devenv.nix  devenv.yaml  devshell.nix  evaluation.py  flake.nix  gui.py  hi  model  pyproject.toml  requirements.txt  run-training.slurm  shell.nix  unet_torchviz  vscode.nix
.nix/: flake.nix  libs.nix  plastimatch.nix
chhip_uq/: __init__.py  __main__.py  constants.py
chhip_uq/data/: __init__.py  datatypes.py  dicom.py  h5.py  processing.py
chhip_uq/evaluation/: __init__.py  visualisation.py
chhip_uq/metrics/: classification.py  uncertainties.py
chhip_uq/models/: confidnet.py  ensemble.py  mcdo.py  unet.py  unet_modules.py
chhip_uq/training/: datasets.py  lightning.py  training.py
chhip_uq/utils/: __init__.py  dict.py  logging.py
scripts/: __helpful_parser.py  context.py  dicom_to_h5.py  evaluate_models.py  evaluation.py  find_surface_dsc_thresh.py  model_training.py  model_training_confidnet.py  multilabel_data_to_h5.py  prepare_dataset.py  train_ensemble.py  train_model.py  train_model_OLD.py
src/: globals.py  utils.py
test/: test_datatypes.py  test_load_dicom.py  test_load_nifti.py  test_preprocessing.py  test_utils.py
tests/: context.py  test_confid_net.py  test_config.py  test_datatypes.py  test_dicom.py  test_ensemble.py  test_h5.py  test_nifti.py  test_preprocessing.py  test_training_classes.py  test_unet.py  test_utils.py
uncertainty/: __init__.py  __main__.py  config.py  constants.py
usages/: dicom_to_h5.py  model_training.py
(+108 files in other folders)
